fix overflow

--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -5,5 +5,5 @@
   margin:0;
   background-color: black; /*Cover use when the animation doesn't work. ex:mobile*/
   overflow: hidden; 
-  overflow-y: scroll;
+  overflow-y: auto;
 }
